# Schubert

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  LICENSE-COMMERCIAL  README.md  book.toml  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  project.yml  publish.yml  schubert-verify.yml
benches/: computation_paths.rs
book/src/: SUMMARY.md  getting-started.md  introduction.md
book/src/api/: audit.md  axum.md  capability.md  composition.md  controller.md  crypto.md  decision.md  stability.md  tsukoshi.md  wasm.md
book/src/concepts/: capabilities.md  composition.md  decisions.md  math.md  trust.md
book/src/design/: adversarial-concerns.md  architecture-philosophy.md  critique.md  flag-structure.md  holographic.md  roadmap.md  security.md  surreal-trust.md  threat-model.md  verification.md
book/src/examples/: api-gateway.md  context-aware.md  cross-domain.md  policy-loader.md  rate-limiter.md  rbac.md  row-security.md
book/src/guide/: cli.md  crdt.md  feature-flags.md  installation.md  multi-domain.md  policy.md  rate-limiting.md  routing.md
docs/: ROADMAP.md  critique.md  handoff-multi-capability-tokens.md  related-work-survey.md  surreal-trust-levels.md  verification-integration.md
docs/design/: distributed-game-sync.md  wall-crossing-diffusion-composition.md
docs/guide/: architecture.md  cli.md  concepts.md  cookbook.md  feature-flags.md  getting-started.md
examples/: api_gateway.rs  context_aware.rs  cross_domain.rs  generate_ts_lr_tables.rs  policy_loader.rs  rate_limiter.rs  rbac.rs  row_security.rs  tsukoshi_crypto_vectors.rs
examples/deployment/: axum_middleware.rs
examples/policies/: rbac.toml
schubert-tsukoshi/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
schubert-tsukoshi/src/: controller.test.ts  controller.ts  index.ts  lr-tables.ts  partition.ts  types.ts
schubert-tsukoshi/src/crypto/: index.ts  tokens.test.ts  tokens.ts  wire.ts
schubert-tsukoshi/src/protocols/: grant-crdt.test.ts  grant-crdt.ts  index.ts
src/: audit.rs  axum.rs  capability.rs  composition.rs  controller.rs  crdt.rs  crypto.rs  decision.rs  error.rs  holographic.rs  lib.rs  main.rs  multi.rs  phantom.rs  policy.rs  principal.rs  proof.rs  rate_limit.rs  routing.rs  stability.rs  surreal_trust.rs  verify.rs  wasm.rs
src/cli/: discover.rs  explore.rs  mod.rs  recommend.rs
tests/golden/: README.md
