[package]
name = "schubert"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Schubert calculus as a practical access control system — quantitative capability-based authorization"
license = "AGPL-3.0-only"
repository = "https://github.com/industrial-algebra/Schubert"
keywords = ["access-control", "authorization", "schubert-calculus", "capability", "security"]
categories = ["authentication", "mathematics", "data-structures"]

[features]
default = ["std"]
std = []
serde = ["amari-enumerative/serde"]
karpal = ["dep:karpal-proof"]
parallel = ["dep:rayon", "amari-enumerative/parallel"]
policy = ["serde", "dep:toml"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "amari-enumerative/wasm"]
crypto = ["dep:ed25519-dalek", "dep:rand"]
karpal-verify = ["dep:karpal-verify", "dep:karpal-schubert-types", "karpal"]
holographic = ["dep:minuet"]
surreal = ["dep:amari-surreal"]

[dependencies]
clap = { version = "4", features = ["derive"] }
amari-enumerative = { version = "0.23", features = ["tropical-schubert"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
karpal-proof = { version = "0.5", optional = true }
rayon = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
ed25519-dalek = { version = "2", optional = true, features = ["rand_core"] }
rand = { version = "0.8", optional = true }
karpal-verify = { version = "0.5", optional = true }
karpal-schubert-types = { version = "0.5", optional = true }
minuet = { version = "0.3", optional = true }
amari-surreal = { version = "0.23", optional = true, features = ["experimental-epsilon"] }
num-traits = "0.2"
num-bigint = "0.4"

[dev-dependencies]

[[example]]
name = "rbac"
path = "examples/rbac.rs"

[[example]]
name = "api_gateway"
path = "examples/api_gateway.rs"

[[example]]
name = "row_security"
path = "examples/row_security.rs"

[[example]]
name = "policy_loader"
path = "examples/policy_loader.rs"
required-features = ["policy"]

[[example]]
name = "cross_domain"
path = "examples/cross_domain.rs"

[[example]]
name = "context_aware"
path = "examples/context_aware.rs"

[[example]]
name = "rate_limiter"
path = "examples/rate_limiter.rs"
